--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@ nav .right a:hover {
     color: var(--accent-color);
 }
 
-#about {
+#hero {
     padding: 100px 0;
     width: 100%;
 }
@@ -114,9 +114,16 @@ button:hover {
 
 #projects .project-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: start;
     padding: 70px;
+    color: white;
+}
+
+#projects h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    padding-top: 40px;
     color: white;
 }
 
@@ -158,15 +165,25 @@ button:hover {
 #contact-skills {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    background-color: var(--light-accent-color);
+    color: var(--primary-color)
 }
 
-.contact, .skills {
+.about,
+.skills {
     padding: 20px;
 }
 
 .icons a {
     margin-right: 10px;
+    position: relative;
 }
+
+.social {
+    color: var(--primary-color);
+}
+
+
 
 .skills ul {
     list-style-type: none;
@@ -207,11 +224,13 @@ button:hover {
 
 .social-icons {
     display: flex;
+    font-size: 1.8em;
 }
 
 .social-icons a {
     color: white;
     margin-left: 10px;
+
 }
 
 .fade-in-section {
