--- a/assets/style.css
+++ b/assets/style.css
@@ -63,7 +63,8 @@ nav .right a:hover {
 .text {
     background-color: var(--primary-color);
     padding: 20px;
-    flex-basis: 60%;
+    flex-basis: 40%;
+    margin-left: 40px;
 }
 
 .text h2 {
@@ -82,7 +83,7 @@ nav .right a:hover {
 }
 
 .photo {
-    flex-basis: 40%;
+    flex-basis: 60%;
 }
 
 .photo img {
@@ -103,7 +104,6 @@ button {
     color: var(--primary-color);
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -154,7 +154,6 @@ button:hover {
     background-color: #B5F44A;
     color: #000;
     text-decoration: none;
-    border-radius: 8px;
     transition: background-color 0.3s;
 }
 
