--- a/assets/style.css
+++ b/assets/style.css
@@ -110,6 +110,7 @@ button, .button {
     display: inline-block;
     cursor: pointer;
     margin-right: 10px;
+    margin-top: 20px;
 }
 
 button:hover, .button:hover {
